# ai-governance-mapping

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
articles/: README.md  article-1-hallucination.md  article-2-cost.md  article-3-governance.md
controls/: unified_controls.csv
controls/policies/: README.md  data.json  governance.rego  governance_test.rego
docs/: eu-ai-act-mapping.md  iso-42001-mapping.md  nist-ai-rmf-mapping.md  owasp-llm-top10-mapping.md
docs/superpowers/plans/: 2026-06-24-catalog-schema-v2.md
docs/superpowers/specs/: 2026-06-24-catalog-schema-v2-design.md
examples/: sample_input.json  sample_project.yaml
src/aigov/: __init__.py  catalog.py  check.py  cli.py
templates/: audit_log_schema.json  model_card.md  risk_assessment.md
tests/: test_aigov.py  test_generate_artifacts.py
tools/: compliance_check.py  generate_artifacts.py
