[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigov"
version = "0.1.0"
description = "Unified AI governance controls catalog and compliance gap-check CLI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jean Malaquias" }]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
compliance-check = "aigov.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aigov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["src/aigov"]
